--- a/templates/test/index.html.twig
+++ b/templates/test/index.html.twig
@@ -15,6 +15,37 @@
     {% for imageBase in base.imageBaseSlider  %}
         <img src="{{ vich_uploader_asset(imageBase, 'imageFile')|imagine_filter('squared_300_300') }}" alt="">
     {% endfor %}
+
+    {% for emails in base.emails %}
+        {{ emails.email }} <br>
+    {% endfor %}
+        <br>
+
+        {% for phones in base.phones %}
+            {% if vich_uploader_asset(phones, 'imageFile') %}
+            <img src="{{ vich_uploader_asset(phones, 'imageFile')|imagine_filter('squared_50_50') }}" alt="">
+            {% endif %}
+            {{ phones.number }}
+            {{ phones.operator }}
+        {% endfor %}
+
+        {% for social in base.social %}
+            <a href="{{ social.link }}">
+                {% if vich_uploader_asset(social, 'imageFile') %}
+                    <img src="{{ vich_uploader_asset(social, 'imageFile')|imagine_filter('squared_50_50') }}" alt="{{ social.title }}">
+                {% endif %}
+            </a>
+        {% endfor %}
+
+        {% for partner in base.partner %}
+            <a href="{{ partner.link }}" >
+                {% if vich_uploader_asset(partner, 'imageFile') %}
+                    <img src="{{ vich_uploader_asset(partner, 'imageFile')|imagine_filter('squared_50_50') }}" alt="{{ partner.title }}" title="{{ partner.title }}">
+                {% endif %}
+            </a>
+        {% endfor %}
+
+
     {% endif %}
 
 </div>
