--- a/public/css/stlbootstr.css
+++ b/public/css/stlbootstr.css
@@ -7321,6 +7321,9 @@ button.bg-dark:focus {
   right: 0;
   left: 0;
   z-index: 1030;
+  max-width: 1366px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .fixed-bottom {
