--- a/templates/base/menu.html.twig
+++ b/templates/base/menu.html.twig
@@ -13,7 +13,7 @@
     </div>
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav">
             <li class="nav-item ">
                 <a class="nav-link" href="{{ path('home') }}">Главная <span class="sr-only">(current)</span></a>
             </li>
@@ -52,12 +52,9 @@
             {% endfor %}
 
             <li class="nav-item">
-                <a class="nav-link" href="">Товары</a>
+                <a class="nav-link " href="">Блог</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link " href="">О нас</a>
-            </li>
-            <li class="nav-item">
+            <li class="nav-item cart-no-smart">
                 <a class="nav-link" href="{{ path('order_cart') }}">
                     <i class="fas fa-shopping-cart"></i>
                     <span class="js-header-cart" data-href="{{ path('order_header_cart') }}">
@@ -67,6 +64,46 @@
                 </a>
             </li>
         </ul>
+
+        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+
+                <a href="{{ path('fos_user_security_logout') }}" class="nav-link litle-text">
+                    {{app.user.usernameCanonical}} |
+                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                </a>
+                <a href="" class="nav-link litle-text hide-admin">
+                    Личный кабинет
+                </a>
+                {% for role in app.user.roles %}
+                    {% if role == "ROLE_ADMIN" %}
+                        <a href="{{ path('sonata_admin_dashboard') }}" class="nav-link litle-text">
+                            Панель администратора
+                        </a>
+                        <style>
+                            .hide-admin{
+                                display: none;
+                            }
+                        </style>
+                    {% endif %}
+                {% endfor %}
+
+        {% else %}
+
+                <a href="{{ path('fos_user_security_login') }}" class="nav-link litle-text">
+                    {{ 'layout.login'|trans({}, 'FOSUserBundle') }}
+                </a>
+
+                <a href="{{ path('fos_user_registration_register') }}" class="nav-link litle-text">
+                    {{ 'layout.register'|trans({}, 'FOSUserBundle') }}
+                </a>
+
+        {% endif %}
+
+            <form action="{{ path('search') }}" class="form-inline my-2 my-lg-0 form-search">
+                <input class="form-control-sm mr-sm-2" minlength="3" maxlength="20" name="search" type="search" placeholder="Поиск" aria-label="Search">
+                <button class="btn-sm btn-primary my-1" type="submit">Найти</button>
+            </form>
+
     </div>
 </nav>
 
