--- a/templates/order/thanks.html.twig
+++ b/templates/order/thanks.html.twig
@@ -1,8 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <div class="row">
+        <h1 class="order-thanks">Спасибо за заказ!</h1>
+    </div>
 
-    <h1 class="left-2rem">Спасибо за заказ!</h1>
 
 {% endblock %}
 
