--- a/templates/question/thanks_for_question.html.twig
+++ b/templates/question/thanks_for_question.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1 class="left-2rem">Спасибо за Ваш вопрос, в ближайшее время мы с Вами свяжемся!</h1>
+    <br><h1 class="left-2rem">Спасибо за Ваш вопрос, в ближайшее время мы с Вами свяжемся!</h1><br>
 {% endblock %}
 
